MP1-4938: Add Studios package to MP Deploy tool

--- a/Tools/MediaPortal.DeployTool/MediaPortal.DeployTool.csproj
+++ b/Tools/MediaPortal.DeployTool/MediaPortal.DeployTool.csproj
@@ -102,6 +102,7 @@
     <Compile Include="InstallationChecks\DiskSpaceChecker.cs" />
     <Compile Include="InstallationChecks\InternetChecker.cs" />
     <Compile Include="InstallationChecks\VCRedistChecker_2015.cs" />
+    <Compile Include="InstallationChecks\StudiosExtensionInstall.cs" />
     <Compile Include="ManualDownloadFileMissing.cs">
       <SubType>Form</SubType>
     </Compile>
