--- a/mediaportal/Core/Core.csproj
+++ b/mediaportal/Core/Core.csproj
@@ -1706,14 +1706,14 @@ xcopy "$(TargetDir)core.*" "$(SolutionDir)MediaPortal.Application\bin\$(Configur
     <Error Condition="!Exists('..\..\Packages\bass.wasapi.2.4.1.2\build\bass.wasapi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Packages\bass.wasapi.2.4.1.2\build\bass.wasapi.targets'))" />
     <Error Condition="!Exists('..\..\Packages\bass.wma.2.4.5.1\build\bass.wma.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Packages\bass.wma.2.4.5.1\build\bass.wma.targets'))" />
     <Error Condition="!Exists('..\..\Packages\bass.wv.2.4.6.0\build\bass.wv.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Packages\bass.wv.2.4.6.0\build\bass.wv.targets'))" />
-    <Error Condition="!Exists('..\..\Packages\BASS.2.4.12.1\build\native\bass.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Packages\BASS.2.4.12.1\build\native\bass.targets'))" />
+    <Error Condition="!Exists('..\..\Packages\BASS.2.4.12.1\build\bass.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Packages\BASS.2.4.12.1\build\bass.targets'))" />
     <Error Condition="!Exists('..\..\Packages\MediaInfo.Native.18.12.2\build\MediaInfo.Native.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Packages\MediaInfo.Native.18.12.2\build\MediaInfo.Native.targets'))" />
   </Target>
   <Import Project="..\..\Packages\bass.alac.2.4.3\build\bass.alac.targets" Condition="Exists('..\..\Packages\bass.alac.2.4.3\build\bass.alac.targets')" />
   <Import Project="..\..\Packages\bass.ofr.2.4.0.2\build\bass.ofr.targets" Condition="Exists('..\..\Packages\bass.ofr.2.4.0.2\build\bass.ofr.targets')" />
   <Import Project="..\..\Packages\bass.vst.2.4.5\build\bass.vst.targets" Condition="Exists('..\..\Packages\bass.vst.2.4.5\build\bass.vst.targets')" />
   <Import Project="..\..\Packages\bass.wadsp.2.4.1\build\bass.wadsp.targets" Condition="Exists('..\..\Packages\bass.wadsp.2.4.1\build\bass.wadsp.targets')" />
-  <Import Project="..\..\Packages\BASS.2.4.12.1\build\native\bass.targets" Condition="Exists('..\..\Packages\BASS.2.4.12.1\build\native\bass.targets')" />
+  <Import Project="..\..\Packages\BASS.2.4.12.1\build\bass.targets" Condition="Exists('..\..\Packages\BASS.2.4.12.1\build\bass.targets')" />
   <Import Project="..\..\Packages\bass.aac.2.4.5.1\build\bass.aac.targets" Condition="Exists('..\..\Packages\bass.aac.2.4.5.1\build\bass.aac.targets')" />
   <Import Project="..\..\Packages\bass.ac3.2.4.0.5\build\bass.ac3.targets" Condition="Exists('..\..\Packages\bass.ac3.2.4.0.5\build\bass.ac3.targets')" />
   <Import Project="..\..\Packages\bass.ape.2.4.2.0\build\bass.ape.targets" Condition="Exists('..\..\Packages\bass.ape.2.4.2.0\build\bass.ape.targets')" />
