--- a/mediaportal/Core/Core.csproj
+++ b/mediaportal/Core/Core.csproj
@@ -576,6 +576,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="guilib\DXEnums.cs" />
+    <Compile Include="Util\CodecExtenstions.cs" />
     <Compile Include="Util\EncryptDecrypt.cs" />
     <Compile Include="Util\FanArt.cs" />
     <Compile Include="Util\FastImage.cs" />
