--- a/TvEngine3/TVLibrary/TVLibrary/packages.config
+++ b/TvEngine3/TVLibrary/TVLibrary/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>  
-  <package id="MediaInfo" version="0.7.69" targetFramework="net40" />  
+<packages>
+  <package id="MediaInfo" version="0.7.69" targetFramework="net40" />
+  <package id="TBS.CI.API" version="1.0.2.3" targetFramework="net40" />
 </packages>
