--- a/mediaportal/MediaPortal.Application/MediaPortal.csproj
+++ b/mediaportal/MediaPortal.Application/MediaPortal.csproj
@@ -252,6 +252,7 @@
       <Name>Dialogs</Name>
       <Project>{396C5208-5D46-4A11-92C1-FD0F2F42D7DD}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\MediaPortal.Support\MediaPortal.Support.csproj">
       <Project>{BD4A3413-C9F9-4299-BB52-ED45027EE7CC}</Project>
