--- a/DirectShowFilters/MPUrlSourceSplitter/MPUrlSourceSplitter/MPUrlSourceSplitter_libsocket/MPUrlSourceSplitter_libsocket.vcxproj
+++ b/DirectShowFilters/MPUrlSourceSplitter/MPUrlSourceSplitter/MPUrlSourceSplitter_libsocket/MPUrlSourceSplitter_libsocket.vcxproj
@@ -82,6 +82,8 @@
     <ClInclude Include="Dns.h" />
     <ClInclude Include="IpAddress.h" />
     <ClInclude Include="IpAddressCollection.h" />
+    <ClInclude Include="MulticastUdpRawServer.h" />
+    <ClInclude Include="MulticastUdpRawSocketContext.h" />
     <ClInclude Include="MulticastUdpSocketContext.h" />
     <ClInclude Include="MulticastUdpServer.h" />
     <ClInclude Include="NetworkInterface.h" />
@@ -100,6 +102,8 @@
     <ClCompile Include="Dns.cpp" />
     <ClCompile Include="IpAddress.cpp" />
     <ClCompile Include="IpAddressCollection.cpp" />
+    <ClCompile Include="MulticastUdpRawServer.cpp" />
+    <ClCompile Include="MulticastUdpRawSocketContext.cpp" />
     <ClCompile Include="MulticastUdpSocketContext.cpp" />
     <ClCompile Include="MulticastUdpServer.cpp" />
     <ClCompile Include="NetworkInterface.cpp" />
