--- a/DirectShowFilters/MPUrlSourceSplitter/MPUrlSourceSplitter/MPUrlSourceSplitter_libsocket/MPUrlSourceSplitter_libsocket.vcxproj.filters
+++ b/DirectShowFilters/MPUrlSourceSplitter/MPUrlSourceSplitter/MPUrlSourceSplitter_libsocket/MPUrlSourceSplitter_libsocket.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClInclude Include="MulticastUdpSocketContext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MulticastUdpRawSocketContext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MulticastUdpRawServer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -108,6 +114,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MulticastUdpSocketContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MulticastUdpRawSocketContext.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MulticastUdpRawServer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
