--- a/DirectShowFilters/MPUrlSourceSplitter/MPUrlSourceSplitter/MPUrlSourceSplitter_libsocket/MPUrlSourceSplitter_libsocket.vcxproj.filters
+++ b/DirectShowFilters/MPUrlSourceSplitter/MPUrlSourceSplitter/MPUrlSourceSplitter_libsocket/MPUrlSourceSplitter_libsocket.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClInclude Include="MulticastUdpRawServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Ipv4Header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ipv4Header_Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -120,6 +126,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MulticastUdpRawServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Ipv4Header.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
