--- a/mediaportal/Configuration/App.config
+++ b/mediaportal/Configuration/App.config
@@ -23,7 +23,7 @@
     <loadFromRemoteSources enabled="true" />
   </runtime>
   <appSettings>
-    <add key="version" value="1.23.0" />
+    <add key="version" value="1.24.0 Pre Release" />
   </appSettings>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0.30319" />
