MP1-4986: Final changes after all corrections, modifications and additions (between pull request merge and this commit).

--- a/mediaportal/WindowPlugins/GUIPictures/GUIPictures.csproj
+++ b/mediaportal/WindowPlugins/GUIPictures/GUIPictures.csproj
@@ -230,6 +230,7 @@
       <Link>SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="FolderSetting.cs" />
+    <Compile Include="GUIPictureExif.cs" />
     <Compile Include="GUIPictures.cs" />
     <Compile Include="GUISlidePicture.cs" />
     <Compile Include="GUISlideShow.cs" />
