--- a/mediaportal/Core/packages.config
+++ b/mediaportal/Core/packages.config
@@ -1,29 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BASS" version="2.4.12.1" targetFramework="net40" />
-  <package id="bass.aac" version="2.4.5.1" targetFramework="net40" />
-  <package id="bass.ac3" version="2.4.0.5" targetFramework="net40" />
-  <package id="bass.alac" version="2.4.3" targetFramework="net40" />
-  <package id="bass.ape" version="2.4.2.0" targetFramework="net40" />
-  <package id="bass.asio" version="1.3.1" targetFramework="net40" />
-  <package id="bass.cd" version="2.4.6.0" targetFramework="net40" />
-  <package id="bass.dsd" version="2.4.0.2" targetFramework="net40" />
-  <package id="bass.flac" version="2.4.3.0" targetFramework="net40" />
-  <package id="bass.fx" version="2.4.11.1" targetFramework="net40" />
-  <package id="bass.midi" version="2.4.10.0" targetFramework="net40" />
-  <package id="bass.mix" version="2.4.8.0" targetFramework="net40" />
-  <package id="bass.mpc" version="2.4.1.2" targetFramework="net40" />
-  <package id="BASS.NET" version="2.4.12.5" targetFramework="net40" />
-  <package id="bass.ofr" version="2.4.0.2" targetFramework="net40" />
-  <package id="bass.opus" version="2.4.1.9" targetFramework="net40" />
-  <package id="bass.spx" version="2.4.3.2" targetFramework="net40" />
-  <package id="bass.tta" version="2.4.0.2" targetFramework="net40" />
-  <package id="bass.vst" version="2.4.5" targetFramework="net40" />
-  <package id="bass.wadsp" version="2.4.1" targetFramework="net40" />
-  <package id="bass.wasapi" version="2.4.1.2" targetFramework="net40" />
-  <package id="bass.wma" version="2.4.5.1" targetFramework="net40" />
-  <package id="bass.wv" version="2.4.6.0" targetFramework="net40" />
-  <package id="BassRegistration" version="2.4.12.5" targetFramework="net40" />
+  <package id="BASS.NET" version="2.4.14.1" targetFramework="net40" />
+  <package id="BASSCombined" version="2.4.15" targetFramework="net40" />
+  <package id="BassRegistration" version="2.4.14.1" targetFramework="net40" />
   <package id="CSCore" version="1.2.1.2" targetFramework="net40" />
   <package id="ffmpeg" version="2.7.1" targetFramework="net40" />
   <package id="MediaInfo.Native" version="19.4.0" targetFramework="net40" />
