--- a/mediaportal/Databases/packages.config
+++ b/mediaportal/Databases/packages.config
@@ -5,4 +5,6 @@
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net35" />
   <package id="MediaInfo.Native" version="19.4.0" targetFramework="net40" />
   <package id="MediaInfo.Wrapper" version="19.4.1" targetFramework="net40" />
+  <package id="MetadataExtractor" version="2.3.0" targetFramework="net40" />
+  <package id="XmpCore" version="6.1.10" targetFramework="net40" />
 </packages>
