MP1-4986: Add PictureData class for external access

--- a/mediaportal/Databases/Databases.csproj
+++ b/mediaportal/Databases/Databases.csproj
@@ -276,6 +276,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Pictures\IPictureDatabase.cs" />
+    <Compile Include="Pictures\PictureData.cs" />
     <Compile Include="Pictures\SqlLite\PictureDatabaseSqlLite.cs" />
     <Compile Include="SQLiteClient.cs">
       <SubType>Code</SubType>
